parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> expresion
Rule 1     expresion -> kcal_expr
Rule 2     expresion -> ate_expr
Rule 3     expresion -> average_intake
Rule 4     expresion -> limit
Rule 5     expresion -> sum_day
Rule 6     expresion -> NUMBER
Rule 7     expresion -> ID
Rule 8     limit -> LIMIT NUMBER
Rule 9     ate_expr -> ATE NUMBER ID
Rule 10    kcal_expr -> KCAL ID
Rule 11    kcal_expr -> KCAL ID ASIGN NUMBER
Rule 12    average_intake -> INTAKE
Rule 13    sum_day -> SUM DAY DATE

Terminals, with rules where they appear

ASIGN                : 11
ATE                  : 9
DATE                 : 13
DAY                  : 13
ID                   : 7 9 10 11
INTAKE               : 12
KCAL                 : 10 11
LIMIT                : 8
NUMBER               : 6 8 9 11
SUM                  : 13
error                : 

Nonterminals, with rules where they appear

ate_expr             : 2
average_intake       : 3
expresion            : 0
kcal_expr            : 1
limit                : 4
sum_day              : 5

Parsing method: LALR

state 0

    (0) S' -> . expresion
    (1) expresion -> . kcal_expr
    (2) expresion -> . ate_expr
    (3) expresion -> . average_intake
    (4) expresion -> . limit
    (5) expresion -> . sum_day
    (6) expresion -> . NUMBER
    (7) expresion -> . ID
    (10) kcal_expr -> . KCAL ID
    (11) kcal_expr -> . KCAL ID ASIGN NUMBER
    (9) ate_expr -> . ATE NUMBER ID
    (12) average_intake -> . INTAKE
    (8) limit -> . LIMIT NUMBER
    (13) sum_day -> . SUM DAY DATE

    NUMBER          shift and go to state 7
    ID              shift and go to state 8
    KCAL            shift and go to state 9
    ATE             shift and go to state 10
    INTAKE          shift and go to state 11
    LIMIT           shift and go to state 12
    SUM             shift and go to state 13

    expresion                      shift and go to state 1
    kcal_expr                      shift and go to state 2
    ate_expr                       shift and go to state 3
    average_intake                 shift and go to state 4
    limit                          shift and go to state 5
    sum_day                        shift and go to state 6

state 1

    (0) S' -> expresion .



state 2

    (1) expresion -> kcal_expr .

    $end            reduce using rule 1 (expresion -> kcal_expr .)


state 3

    (2) expresion -> ate_expr .

    $end            reduce using rule 2 (expresion -> ate_expr .)


state 4

    (3) expresion -> average_intake .

    $end            reduce using rule 3 (expresion -> average_intake .)


state 5

    (4) expresion -> limit .

    $end            reduce using rule 4 (expresion -> limit .)


state 6

    (5) expresion -> sum_day .

    $end            reduce using rule 5 (expresion -> sum_day .)


state 7

    (6) expresion -> NUMBER .

    $end            reduce using rule 6 (expresion -> NUMBER .)


state 8

    (7) expresion -> ID .

    $end            reduce using rule 7 (expresion -> ID .)


state 9

    (10) kcal_expr -> KCAL . ID
    (11) kcal_expr -> KCAL . ID ASIGN NUMBER

    ID              shift and go to state 14


state 10

    (9) ate_expr -> ATE . NUMBER ID

    NUMBER          shift and go to state 15


state 11

    (12) average_intake -> INTAKE .

    $end            reduce using rule 12 (average_intake -> INTAKE .)


state 12

    (8) limit -> LIMIT . NUMBER

    NUMBER          shift and go to state 16


state 13

    (13) sum_day -> SUM . DAY DATE

    DAY             shift and go to state 17


state 14

    (10) kcal_expr -> KCAL ID .
    (11) kcal_expr -> KCAL ID . ASIGN NUMBER

    $end            reduce using rule 10 (kcal_expr -> KCAL ID .)
    ASIGN           shift and go to state 18


state 15

    (9) ate_expr -> ATE NUMBER . ID

    ID              shift and go to state 19


state 16

    (8) limit -> LIMIT NUMBER .

    $end            reduce using rule 8 (limit -> LIMIT NUMBER .)


state 17

    (13) sum_day -> SUM DAY . DATE

    DATE            shift and go to state 20


state 18

    (11) kcal_expr -> KCAL ID ASIGN . NUMBER

    NUMBER          shift and go to state 21


state 19

    (9) ate_expr -> ATE NUMBER ID .

    $end            reduce using rule 9 (ate_expr -> ATE NUMBER ID .)


state 20

    (13) sum_day -> SUM DAY DATE .

    $end            reduce using rule 13 (sum_day -> SUM DAY DATE .)


state 21

    (11) kcal_expr -> KCAL ID ASIGN NUMBER .

    $end            reduce using rule 11 (kcal_expr -> KCAL ID ASIGN NUMBER .)

